--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.28.1",
+    "@skeletonlabs/skeleton": "2.5.1",
+    "@skeletonlabs/tw-plugin": "0.2.4",
     "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.3",
     "@sveltejs/kit": "^1.27.4",
+    "@tailwindcss/forms": "0.5.7",
+    "@tailwindcss/typography": "0.5.10",
+    "autoprefixer": "10.4.16",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-svelte": "^2.30.0",
+    "postcss": "8.4.31",
     "prettier": "^3.0.0",
     "prettier-plugin-svelte": "^3.0.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.6.0",
+    "tailwindcss": "3.3.5",
     "typescript": "^5.0.0",
     "vite": "^4.4.2",
-    "vitest": "^0.32.2",
-    "postcss": "8.4.31",
-    "autoprefixer": "10.4.16",
-    "tailwindcss": "3.3.5",
-    "@skeletonlabs/skeleton": "2.5.1",
-    "@skeletonlabs/tw-plugin": "0.2.4",
     "vite-plugin-tailwind-purgecss": "0.1.3",
-    "@tailwindcss/typography": "0.5.10",
-    "@tailwindcss/forms": "0.5.7"
+    "vitest": "^0.32.2"
   },
   "type": "module",
   "dependencies": {
